<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.goncharov.anton.heyteacher.MainActivity">


    <EditText
        android:id="@+id/editText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorLink="@color/colorMain"
        android:textCursorDrawable="@color/colorMain"
        android:backgroundTint="@color/colorMain" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/login"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/editText1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColorLink="@color/colorMain"
        android:textCursorDrawable="@color/colorMain"
        android:backgroundTint="@color/colorMain" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:textSize="20sp"
        android:text="@string/pswr"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:background="@color/colorMain"
        android:text="@string/ok_menu"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:text="@string/registration"
        android:textColor="@color/colorMain"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:text="@string/forgot_pswr"
        android:textColor="@color/colorMain"
        android:textSize="18sp" />

</RelativeLayout>
